--- a/index.html
+++ b/index.html
@@ -1,9 +1,19 @@
-<html>
- 
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="./resources/css/index.css" type="text/css" rel="stylesheet">
+    <title>Krištof Polák</title>
+</head>
 <body>
-  <h1>Krištof Polák</h1>
-  <p>Welcome to my website!</p>
-  <img src="https://content.codecademy.com/articles/github-pages-via-web-app/happy-ice-cream.gif" />
+    <h1>Krištof Polák</h1>
+<p>Portfolio</p>
+<ul>
+  <li>About me</li>
+  <li>My projects</li>
+  <li>Contact</li>
+</ul>
 </body>
- 
 </html>
